--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,8 +1,3 @@
-// body {
-//   position: relative;
-//   padding-bottom: 60px;
-// }
-
 .footer {
   position: absolute;
   width: 100%;
@@ -41,6 +36,21 @@ font-weight: 400;
   }
 }
 
+.footer__sub {
+  color: #545454;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  display: flex;
+  font-size: 14px;
+  justify-content: center;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: calc(19 / 16);
+  }
+}
+
 .footer__icon {
   margin-left: 10px;
   margin-right: 10px;
@@ -62,14 +72,18 @@ font-weight: 400;
 }
 
 .footer__btn {
+  padding-top: 10px;
+    padding-bottom: 10px;
+    color: #545454;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
+    cursor: pointer;
   background-color: transparent;
   text-decoration: underline #545454;
-}
+
 
 .footer__btn:hover {
-  font-weight: 600;
-  color: #545454bb;
-  text-decoration: underline 2px #545454bb;
+  color: #934a4abb;
 }
 
 .footer__btn:hover 
@@ -77,3 +91,10 @@ font-weight: 400;
   width: 200px;
   height: 200px;
 }
+
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      line-height: calc(19 / 16);
+      padding: 0;
+    }
+    }
