--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -61,6 +61,50 @@
 
   background-color: transparent;
   box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+
+//   @include mobile {
+//     width: 100%;
+//       flex-basis: calc((100% - 1 * 32px) / 2);
+//       margin-right: 32px;
+//       margin-bottom: 32px;
+    
+//       &:not(:last-child) {
+//         margin-bottom: 32px;
+//         margin-right: 32px;
+//       }
+    
+//       &:nth-child(2n) {
+//         margin-right: 0;
+//       }
+    
+//       &:last-child {
+//         margin-right: auto;
+//         margin-bottom: 0px;
+//       }
+    
+//       &:nth-last-child(-n + 2) {
+//         margin-bottom: 0;
+//   }
+// }
+
+//  @include desktop {
+//    flex-basis: calc((100% - 3 * 16px) / 4);
+//    margin-right: 16px;
+//    margin-bottom: 32px;
+
+//    &:nth-child(4n) {
+//      margin-right: 0;
+//    }
+
+//    &:last-child {
+//      margin-right: auto;
+//      margin-bottom: 0px;
+//    }
+
+//    &:nth-last-child(-n + 4) {
+//      margin-bottom: 0;
+//    }
+//  }
 }
 
 .team__wrapper {
