--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -1,9 +1,4 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
   background-color: #ffffff;
-  position: relative;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
