--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery-section library-section">
+<section class="gallery-section">
   <div class="container gallery-container gallery">
     <ul class="gallery-list"></ul>
   </div>
