--- a/src/partials/team-modal.html
+++ b/src/partials/team-modal.html
@@ -1,6 +1,7 @@
 <div class="footer__backdrop is-hidden" id="modal-team">
   <div class="footer__modal">
     <button class="close" id="close">X</button>
+    <h2 class="team">Our Team</h2>
     <ul class="team__list">
       <!-- 1st -->
       <li class="team__item">
@@ -35,15 +36,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/BohdanMusiienko.jpg"
-                  alt="BohdanMusiienko"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/BohdanMusiienko.jpg"
+                alt="BohdanMusiienko"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -85,15 +84,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/InhaYurchenko.jpg"
-                  alt="InhaYurchenko"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/InhaYurchenko.jpg"
+                alt="InhaYurchenko"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -135,15 +132,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/StepanSkichko.jpg"
-                  alt="StepanSkichko"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/BohdanMusiienko.jpg"
+                alt="StepanSkichko"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -185,15 +180,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/DmytroLitvinenko.jpg"
-                  alt="DmytroLitvinenko "
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/DmytroLitvinenko.jpg"
+                alt="DmytroLitvinenko "
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -235,15 +228,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/AnastasiiaYurchenko.jpg"
-                  alt="AnastasiiaYurchenko "
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/AnastasiiaYurchenko.jpg"
+                alt="AnastasiiaYurchenko "
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -285,15 +276,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/RudSerhii.jpg"
-                  alt="SerhiiRud"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/RudSerhii.jpg"
+                alt="SerhiiRud"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -335,15 +324,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/RudNataliia.jpg"
-                  alt="NataliiaRud"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/RudNataliia.jpg"
+                alt="NataliiaRud"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -371,7 +358,7 @@
             </li>
             <li class="sns-list__item">
               <a
-                href="https://www.linkedin.com/in/maryna-danyliuk-a370a9271/"
+                href="https://github.com/maridanyliuk"
                 lang="en"
                 class="sns-list__link"
                 target="_blank"
@@ -385,15 +372,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/MarynaDanyliuk.jpg"
-                  alt="MarynaDanyliuk"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/InhaYurchenko.jpg"
+                alt="MarynaDanyliuk"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -435,15 +420,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/OleksandrSibirtsev.jpg"
-                  alt="OleksandrSibirtsev"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/OleksandrSibirtsev.jpg"
+                alt="OleksandrSibirtsev"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -485,15 +468,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/AnatoliiPysarenko.jpg"
-                  alt="AnatoliiPysarenko"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/AnatoliiPysarenko.jpg"
+                alt="AnatoliiPysarenko"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -535,15 +516,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/NataliiaTsyren.jpg"
-                  alt="NataliiaTsyren"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/NataliiaTsyren.jpg"
+                alt="NataliiaTsyren"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -585,15 +564,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/ElnaraMamedova.jpg"
-                  alt="ElnaraMamedova"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/ElnaraMamedova.jpg"
+                alt="ElnaraMamedova"
+                width="280px"
+              />
             </div>
           </div>
         </div>
@@ -635,15 +612,13 @@
             </li>
           </ul>
           <div class="team__student-photo--wrap">
-            <div class="team__border-outside">
-              <div class="team__foto-thumb">
-                <img
-                  class="team__student-foto"
-                  src="./images/Team/DmytroV.jpg"
-                  alt="Dmytro Vaksman"
-                  width="280px"
-                />
-              </div>
+            <div class="team__foto-thumb">
+              <img
+                class="team__student-foto"
+                src="./images/Team/DmytroV.jpg"
+                alt="Dmytro Vaksman"
+                width="280px"
+              />
             </div>
           </div>
         </div>
