--- a/src/sass/components/_spinner.scss
+++ b/src/sass/components/_spinner.scss
@@ -1,31 +1,30 @@
-.spinner {
-    width: 100px;
-    height: 100px;
-    border: 6px solid rgba(4, 3, 3, 0.6);
-    border-radius: 50%;
-    border-color: rgb(244, 21, 21) transparent rgb(237, 27, 27) transparent;
-    animation: spin 1.2s ease infinite;
-  }
-
-  @keyframes spin { 
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+// body {
+//   background: linear-gradient(to bottom right, magneta, cyan);
+//   display: flex;
+//   height: 100vh;
+//   align-items: center;
+//   justify-content: center;
+// } 
 
 .spinner-container {
-      width: 100%;
-      height: 100%;
-      position: fixed;
-      top: 0;
-      z-index: 100;
-      transition: 100ms;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-    .hide {
-      display: none;
-    }
+.spinner {
+  height: 120px;
+  width: 120px;
+  border: 6px solid white;
+  border-color: rgb(244, 21, 21) transparent rgb(237, 27, 27) transparent;
+  border-radius: 50%;
+  animation: spin 1.2s ease infinite;
 
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
