--- a/src/sass/components/_team-modal.scss
+++ b/src/sass/components/_team-modal.scss
@@ -193,11 +193,11 @@ padding: 10px;
 
 .team__student-name {
   margin-bottom: 10px;
-  letter-spacing: 2px;
   font-size: 15px;
 }
 
 .team__student-role {
+  color: grey;
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 15px;
