--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 /* Components */
 @import './components/spinner';
 @import './components/scroll-up-btn';
+@import './components/pagination';
 
 /* Layouts*/
 @import './components/header-main';
