Пофіксила помилки в консолі на бібліотеці

--- a/src/partials/library-list.html
+++ b/src/partials/library-list.html
@@ -1,5 +1,6 @@
 <section class="gallery-section">
   <div class="container gallery-container gallery">
+    <!-- <div class="empty-container"></div> -->
     <ul class="library-list">
       <!-- <li class="film-card">
         
